--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <img class="main_bg" src="img/minecraft_bg.png" alt="Фонове Зображення Майнкрафт">
             <p class="main_text">Вітаємо на нашому сайті!<br>Тут ви зможете знайти всі<br> наші модифікації.</p>
-            <a href="" class="button_mod">Модифікації</a>
+            <a href="mods.html" class="button_mod">Модифікації</a>
 
         </main>
 
