--- a/index_en.html
+++ b/index_en.html
@@ -16,7 +16,7 @@
             <img class="logo" src="img/logo.png" alt="Logo">
 
             <nav class="nav">
-                <li class="content"><a href="index.html" class="item">Home</a></li>
+                <li class="content"><a href="index_en.html" class="item">Home</a></li>
                 <li class="content"><a href="" class="item">Service</a></li>
                 <li class="content"><a href="" class="item">About us</a></li>
             </nav>
@@ -34,7 +34,7 @@
 
             <img class="main_bg" src="img/minecraft_bg.png" alt="Background Image Minecraft">
             <p class="main_text">Welcome to our website!<br>Here you can find all<br> our modifications.</p>
-            <a href="" class="button_mod">Modifications</a>
+            <a href="mods_en.html" class="button_mod">Modifications</a>
 
         </main>
 
