--- a/index_en.html
+++ b/index_en.html
@@ -34,7 +34,7 @@
 
             <img class="main_bg" src="img/minecraft_bg.png" alt="Background Image Minecraft">
             <p class="main_text">Welcome to our website!<br>Here you can find all<br> our modifications.</p>
-            <a href="mods_en.html" class="button_mod">Modifications</a>
+            <a href="mods.html" class="button_mod">Modifications</a>
 
         </main>
 
